// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutSider component renders correctly collapsed 1`] = `
<Sider
  collapsed={true}
  collapsedWidth={0}
  collapsible={true}
  trigger={null}
>
  <Menu
    defaultSelectedKeys={
      Array [
        "1",
      ]
    }
    mode="inline"
    onClick={[Function]}
    theme="dark"
  >
    <MenuItem
      key="1"
    >
      <Icon
        theme="filled"
        type="home"
      />
      <span>
        Home
      </span>
    </MenuItem>
    <MenuItem
      key="2"
    >
      <Icon
        theme="outlined"
        type="file-search"
      />
      <span>
        Library
      </span>
    </MenuItem>
    <MenuItem
      key="3"
    >
      <Icon
        theme="filled"
        type="star"
      />
      <span>
        Your List
      </span>
    </MenuItem>
    <MenuItem
      key="4"
    >
      <Icon
        theme="filled"
        type="info-circle"
      />
      <span>
        About
      </span>
    </MenuItem>
  </Menu>
</Sider>
`;

exports[`LayoutSider component renders correctly uncollapsed 1`] = `
<Sider
  collapsed={false}
  collapsedWidth={0}
  collapsible={true}
  trigger={null}
>
  <Menu
    defaultSelectedKeys={
      Array [
        "1",
      ]
    }
    mode="inline"
    onClick={[Function]}
    theme="dark"
  >
    <MenuItem
      key="1"
    >
      <Icon
        theme="filled"
        type="home"
      />
      <span>
        Home
      </span>
    </MenuItem>
    <MenuItem
      key="2"
    >
      <Icon
        theme="outlined"
        type="file-search"
      />
      <span>
        Library
      </span>
    </MenuItem>
    <MenuItem
      key="3"
    >
      <Icon
        theme="filled"
        type="star"
      />
      <span>
        Your List
      </span>
    </MenuItem>
    <MenuItem
      key="4"
    >
      <Icon
        theme="filled"
        type="info-circle"
      />
      <span>
        About
      </span>
    </MenuItem>
  </Menu>
</Sider>
`;
